@@ -28,7 +28,8 @@ Zope Changes
     Bugs Fixed
 
       - ZPublisher.BaseRequest: The publisher would happily publish attributes
-        of type 'bool' and 'complex'.
+        of type 'bool' and 'complex', as well as Python 2.4's 'set' and
+        'frozenset'.
 
       - Collector #1991: ZPublisher did not deal properly with a trailing
         %20 in the URL
